[package]
name = "advent-of-code"
version = "0.0.1"
description = "my solutions of advent of code"
authors = ["you"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
md5 = "0.8.0"
num-traits = "0.2.19"
paste = "1.0.15"
scanf = "2.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
ureq = { version = "3.1.4", features = ["cookies"] }
